# offline-note-taker

./: .gitignore  AGENTS.md  README.md  pyproject.toml  run_offline_note_taker.ps1
.github/workflows/: ci.yml
docs/: aihub_setup.md  architecture.md  demo_checklist.md  demo_script_3_minute.md  medium_blog_draft.md
scripts/: setup_qairt_245.ps1  setup_qualcomm_whisper_windows.ps1  setup_qwen3_4b_genie.ps1
src/offline_meeting_notes/: __init__.py  __main__.py  aihub_runtime.py  app_paths.py  audio.py  chunking.py  cleanup.py  diagnostics.py  evaluation.py  exporters.py  gui.py  local_process.py  models.py  packaging.py  pipeline.py  qa.py  quality.py  runtime_doctor.py  session_store.py  settings.py  summarization.py  timecode.py  transcription.py
tests/: test_audio.py  test_chunking.py  test_cli.py  test_diagnostics.py  test_evaluation.py  test_exporters.py  test_gui_smoke.py  test_package.py  test_qa.py  test_quality.py  test_runtime_doctor.py  test_session_store.py  test_settings.py  test_summary_quality.py  test_transcription.py
tests/fixtures/: clear_action_items.txt  no_action_items.txt
tests/fixtures/eval/: ambiguous_owner.json  clear_owners_deadlines.json  decisions_vs_suggestions.json  long_transcript.json  no_action_items.json  noisy_asr.json
