[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "offline-meeting-notes"
version = "0.2.0"
description = "Offline Windows meeting notes beta with local Qualcomm transcription, Genie notes, setup, sessions, and exports."
readme = "README.md"
requires-python = ">=3.12"
authors = [
  { name = "Offline Meeting Notes Contributors" }
]
license = { text = "MIT" }
dependencies = [
  "huggingface-hub>=0.25",
  "numpy>=1.26",
  "safetensors>=0.4",
  "sounddevice>=0.4.6",
  "torch>=2.9",
  "transformers>=4.48"
]

[project.optional-dependencies]
gui = [
  "PySide6-Essentials>=6.7"
]
audio = []
dev = [
  "pytest>=8.0"
]

[project.scripts]
offline-meeting-notes = "offline_meeting_notes.__main__:main"
offline-note-taker = "offline_meeting_notes.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
